--- a/JupyterNotebooks_DigiKAR/Geocode_Plot_GoogleAPI_interactiveMAP.ipynb
+++ b/JupyterNotebooks_DigiKAR/Geocode_Plot_GoogleAPI_interactiveMAP.ipynb
@@ -121,7 +121,7 @@
         "## geocode data from spreadsheet\n",
         "\n",
         "# enter Google API key\n",
-        "gmaps = googlemaps.Client(key='######')\n", # please enter your own API key
+        "gmaps = googlemaps.Client(key='######')\n", 
         "\n",
         "# input addresses in EXCEL format and read\n",
         "infile=directory+\"Addresses_Geocoded.xlsx\" # alternative input from Google Drive\n",
