--- a/JupyterNotebooks_DigiKAR/TransferPROFData.ipynb
+++ b/JupyterNotebooks_DigiKAR/TransferPROFData.ipynb
@@ -82,7 +82,8 @@
         "import pandas as pd\n",
         "from pandas import DataFrame\n",
         "import numpy as np\n",
-        "import os"
+        "import os\n",
+        "import re"
       ],
       "metadata": {
         "id": "-5cFcvKSr347"
@@ -112,7 +113,7 @@
         "# open ontology files and read content to dataframes\n",
         "\n",
         "# READ EVENTS\n",
-        "data_e = pd.read_csv(event_ontology, sep=\",\")\n",
+        "data_e = pd.read_csv(event_ontology, sep=\";\")\n",
         "events_old=data_e['event_old'].values.tolist()\n",
         "    \n",
         "# READ TITLES\n",
@@ -124,7 +125,7 @@
         "function_old=data_f['function_old'].values.tolist()\n",
         "\n",
         "# READ PLACES\n",
-        "data_p = pd.read_csv(place_ontology, sep=\",\")\n",
+        "data_p = pd.read_csv(place_ontology, sep=\";\")\n",
         "places_old=data_p['place_old'].values.tolist()\n"
       ],
       "metadata": {
@@ -192,18 +193,18 @@
         "              'Info': info_list,\n",
         "              'Source': source_list\n",
         "                }\n",
-        "\n",
+        "          global event_df\n",
         "          event_df = pd.DataFrame(data)\n",
-        "          \n",
-        "# show data frame if small enough\n",
-        "try:\n",
-        "    display(event_df) \n",
-        "except:\n",
-        "    display(event_df[:100]) # only show first 100 rows\n",
         "\n",
+        "# show data frame if small enough\n",
+        "    try:\n",
+        "        display(event_df) \n",
+        "    except:\n",
+        "        display(event_df[:100]) # only show first 100 rows\n",
+        "          \n",
         "# call function with input\n",
         "\n",
-        "filenames = directory+\"ReadTXTtoEXCEL\"\n",
+        "filenames = directory+\"ReadTXTtoEXCEL_profs\"\n",
         "extract_information(filenames)\n"
       ],
       "metadata": {
@@ -237,68 +238,105 @@
         "title_list=[]\n",
         "event_list=[]\n",
         "function_list=[]\n",
+        "date_list=[]\n",
         "\n",
         "try:\n",
         "  for x in range(0, df_size):\n",
+        "      print(df_size - x)\n",
         "      e_df=event_df.iloc[[x]]\n",
-        "      #print(\"NEW FRAME: \", e_df)\n",
         "      event_x_list=[]\n",
         "      title_x_list=[]\n",
         "      place_x_list=[]\n",
         "      function_x_list=[]\n",
+        "      date_x_list=[]\n",
         "\n",
-        "    # FIND EVENT\n",
-        "      for e_old in events_old:\n",
+        "    # FIND DATE\n",
+        "      d_values=e_df[\"Info\"].values[0]\n",
+        "      print(d_values)\n",
+        "      try:\n",
+        "          x_date = re.findall(\"[\\d]+[.][\\d]+[.][\\d]+ | [1-3][0-9]{3}\", d_values) # DD.MM.YYYY or YYYY\n",
+        "          for x in x_date:\n",
+        "            if 6>len(x)>4:\n",
+        "                date_x_list.append(x.strip())\n",
+        "            else:\n",
+        "                date_in=x.split(\".\")\n",
+        "                print(date_in)\n",
+        "                year=str(date_in[2].strip())\n",
+        "                if len(date_in[1])>1:\n",
+        "                  month=str(date_in[1])\n",
+        "                else:\n",
+        "                  month=str(\"0\"+date_in[1])\n",
+        "                if len(date_in[0])>1:\n",
+        "                  day=str(date_in[0])\n",
+        "                else:\n",
+        "                  day=str(\"0\"+date_in[0])\n",
+        "                date_out=str(year + \"-\" + month + \"-\" + day)\n",
+        "                print(date_out)\n",
+        "                date_x_list.append(date_out)\n",
+        "      except:\n",
+        "          date_x_list.append(\"#\")\n",
+        "      date_list.append(date_x_list)\n",
+        "\n",
+        "    # FIND EVENT       \n",
+        "      for e_old in events_old: \n",
+        "          e_new=data_e.loc[data_e['event_old'] == e_old, 'event_type'].values[0]\n",
         "          e_values=e_df[\"Info\"].values[0]\n",
         "          if e_old in e_values:\n",
-        "              print(\"MATCH EVENT: \", e_old)\n",
-        "              event_x_list.append(e_old)\n",
+        "              #print(\"MATCH EVENT: \", e_new)\n",
+        "              event_x_list.append(e_new)\n",
         "          else:\n",
-        "              event_x_list.append(\"n/a\")\n",
-        "      event_list.append(set(event_x_list))\n",
+        "              event_x_list.append(\"#\")\n",
+        "      event_list.append(max(event_x_list, key=len))\n",
         "\n",
         "    # FIND TITLE\n",
         "      for t_old in title_old:\n",
         "          t_values=e_df[\"Info\"].values[0]\n",
         "          if t_old in t_values:\n",
-        "              print(\"MATCH TITLE: \", t_old)\n",
-        "              title_x_list.append(e_old)\n",
+        "              #print(\"MATCH TITLE: \", t_old)\n",
+        "              title_x_list.append(t_old)\n",
         "          else:\n",
-        "              title_x_list.append(\"n/a\")\n",
-        "      title_list.append(set(title_x_list))\n",
+        "              title_x_list.append(\"#\")\n",
+        "      title_list.append(max(title_x_list, key=len))\n",
         "\n",
         "    # FIND PLACES\n",
-        "      for p in places_old:\n",
-        "          if p in e_df[\"Info\"].values[0]:\n",
-        "              print(\"MATCH PLACE: \", p)\n",
-        "              place_x_list.append(p)\n",
+        "      for p_old in places_old:\n",
+        "          p_new=data_p.loc[data_p['place_old'] == p_old, 'place_new'].values[0]\n",
+        "          if p_old in e_df[\"Info\"].values[0]:\n",
+        "              print(\"MATCH PLACE: \", p_old)\n",
+        "              place_x_list.append(p_new)\n",
         "          else:\n",
-        "              place_x_list.append(\"n/a\")\n",
+        "              place_x_list.append(\"#\")\n",
         "      place_list.append(set(place_x_list))\n",
         "                \n",
         "    # FIND FUNCTION\n",
         "      for f_old in function_old:\n",
         "          if f_old in e_df[\"Info\"].values[0]:\n",
-        "              print(\"MATCH FUNCTION: \", f_old)\n",
+        "              #print(\"MATCH FUNCTION: \", f_old)\n",
         "              function_x_list.append(f_old)\n",
         "          else:\n",
-        "              function_x_list.append(\"n/a\")\n",
-        "      function_list.append(set(function_x_list))\n",
+        "              function_x_list.append(\"#\")\n",
+        "      function_list.append(max(function_x_list, key=len))\n",
         "\n",
         "except IndexError:\n",
         "  print(\"No more data found.\")\n",
+        "\n",
+        "\n",
         "\n",
         "# add new data to existing data frame\n",
         "event_df[\"events\"] = event_list\n",
         "event_df[\"places\"] = place_list\n",
         "event_df[\"titles\"] = title_list\n",
         "event_df[\"functions\"] = function_list\n",
+        "try:\n",
+        "  event_df[\"date\"] = date_list # add flattened list: [item for sublist in date_list for item in sublist]\n",
+        "except ValueError:\n",
+        "  print(date_list)\n",
         "\n",
         "display(event_df[:100])\n",
         "\n",
         "# write all results to new EXCEL file\n",
         "\n",
-        "workbook=directory+'Profs_OCR_factoid.xlsx'\n",
+        "workbook=directory+'Profs_OCR_factoid_with-dates.xlsx'\n",
         "writer = pd.ExcelWriter(workbook, engine='xlsxwriter') # create a Pandas Excel writer using XlsxWriter as the engine.\n",
         "event_df.to_excel(writer, sheet_name='OCR-to-factoid') # Convert the dataframe to an XlsxWriter Excel object.\n",
         "writer.save() # Close the Pandas Excel writer and output the Excel file."
