--- a/JupyterNotebooks_DigiKAR/Eingabe_via_Konsole_AP2.ipynb
+++ b/JupyterNotebooks_DigiKAR/Eingabe_via_Konsole_AP2.ipynb
@@ -54,7 +54,8 @@
       "source": [
         "## install packages that are not part of Python's standard distribution\n",
         "\n",
-        "!pip install xlsxwriter"
+        "!pip install xlsxwriter\n",
+        "!pip install gwpy --quiet"
       ],
       "metadata": {
         "id": "FgjoKmcd6df8"
@@ -76,11 +77,11 @@
       "source": [
         "## import relevant packages\n",
         "\n",
-        "import PySimpleGUI as sg\n",
         "import xlsxwriter\n",
         "import pandas as pd\n",
         "import matplotlib\n",
-        "import os"
+        "import os\n",
+        "import difflib"
       ],
       "metadata": {
         "id": "W5sXtE-e60c4"
@@ -91,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Schritt 4: Daten laden und benötigte Spalten für die Excel-Tabelle festlegen.**"
+        "**Schritt 4: Daten laden und benötigte Spalten für die Excel-Tabelle festlegen.** Daten aus einzelnen Tabellenblättern werden zusammengeführt."
       ],
       "metadata": {
         "id": "Y-EWiKqg6-nc"
@@ -107,6 +108,28 @@
         "places_sheet=pd.read_excel(file, sheet_name=\"Ortsliste\", index_col=None, dtype=str)\n",
         "places_list=places_sheet[\"Ortsname\"].values.tolist()\n",
         "df_list=[]\n",
+        "\n",
+        "df_Amt = pd.read_excel(file, sheet_name=\"Amtszugehörigkeit\", dtype=str)\n",
+        "df_Grund = pd.read_excel(file, sheet_name=\"Grundherrschaft\", dtype=str)\n",
+        "df_Hoch = pd.read_excel(file, sheet_name=\"Hochgericht\", dtype=str)\n",
+        "df_Erb = pd.read_excel(file, sheet_name=\"Erbgericht\", dtype=str)\n",
+        "df_Kirche = pd.read_excel(file, sheet_name=\"Kirche\", dtype=str)\n",
+        "df_Saessigkeit = pd.read_excel(file, sheet_name=\"Sässigkeit\", dtype=str)\n",
+        "df_Abgabenempfaenger = pd.read_excel(file, sheet_name=\"Abgabenempfänger\", dtype=str)\n",
+        "\n",
+        "df_all = pd.concat([df_Amt, df_Grund, df_Hoch, df_Erb, df_Kirche, df_Saessigkeit, df_Abgabenempfaenger], ignore_index=True, sort=False)\n",
+        "df_all.fillna(\"n/a\")\n",
+        "\n",
+        "rightholders_mult=[]\n",
+        "rightholders_combined = df_all[\"Rechteinhaber\"].values.tolist()\n",
+        "for r in rightholders_combined:\n",
+        "  r_new_list=str(r).split(\", \")\n",
+        "  for r_new in r_new_list:\n",
+        "    rightholders_mult.append(r_new)\n",
+        "rightholders=set(rightholders_mult)\n",
+        "#print(rightholders)\n",
+        "\n",
+        "display(df_all)\n",
         "\n",
         "AP2_columns=[\"Ortsname\", \"Ortslevel\", \"Rechtstyp\", \"Rechteinhaber\", \"Rechtsstatus\", \"Ausübungsort\", \"Abweichung\", \"Jahr\", \"nach-Jahr\", \"vor-Jahr\", \"Quelle\", \"Anmerkung\"]"
       ],
@@ -133,7 +156,7 @@
         "# Funktion zur Datenansicht\n",
         "def view_data(param1):\n",
         "\n",
-        "    print(\"Recht oder Ort:\")\n",
+        "    print(\"Suche Recht, Rechteinhaber oder Ort:\")\n",
         "    user_input=input()\n",
         "\n",
         "    if user_input in rights_list:\n",
@@ -141,16 +164,20 @@
         "      display(data_AP2)\n",
         "      new_selection(1)\n",
         "    elif user_input in places_list:\n",
-        "      df_Amt = pd.read_excel(file, sheet_name=\"Amtszugehörigkeit\", dtype=str)\n",
-        "      data_Amt = df_Amt.loc[df_Amt[\"Ortsname\"] == user_input]\n",
-        "      df_Grund = pd.read_excel(file, sheet_name=\"Grundherrschaft\", dtype=str)\n",
-        "      data_Grund = df_Grund.loc[df_Grund[\"Ortsname\"] == user_input]\n",
-        "      df_Hoch = pd.read_excel(file, sheet_name=\"Hochgericht\", dtype=str)\n",
-        "      data_Hoch = df_Hoch.loc[df_Hoch[\"Ortsname\"] == user_input]\n",
-        "      display(data_Amt, data_Grund, data_Hoch)\n",
+        "      data_AP2 = df_all.loc[df_all[\"Ortsname\"] == user_input]\n",
+        "      display(data_AP2)\n",
         "      new_selection(1)\n",
+        "    elif user_input in rightholders:\n",
+        "      try:\n",
+        "          df_all['Rechteinhaber_str'] = df_all['Rechteinhaber'].map(str) \n",
+        "          data_AP2 = df_all.loc[df_all[\"Rechteinhaber\"].str.contains(user_input, na=False)]\n",
+        "          display(data_AP2)\n",
+        "          new_selection(1)\n",
+        "      except:\n",
+        "        print(\"Gültiger Rechteinhaber, aber kein Treffer in den Daten!\")\n",
+        "        view_data(1)\n",
         "    else:\n",
-        "      print(\"Ungültige Eingabe!\")\n",
+        "      print(\"Kein passender Wert gefunden!\")\n",
         "      view_data(1)\n",
         "\n",
         "# Funktion zur Dateneingabe\n",
@@ -209,7 +236,7 @@
         "# Funktion zur Abfrage weiterer Optionen\n",
         "def new_selection(param3):   \n",
         "\n",
-        "    try_again = input(\"0 = Schließen, 1 = neue Auswahl, 2 = Daten hinzufügen oder ändern\")\n",
+        "    try_again = input(\"0 = Schließen, 1 = neue Auswahl, 2 = Daten hinzufügen oder ändern. \\n Das Schließen speichert Ihre Eingaben in einer neuen Datei.\")\n",
         "    try:\n",
         "        try_again = int(try_again)  # non-numeric input from user could otherwise crash at this point\n",
         "        if try_again == 0:\n",
@@ -230,9 +257,10 @@
         "        workbook=directory+'OUTPUT AP2/'+fName+'.xlsx'\n",
         "        #old_df=pd.read_excel(file, index_col=None, dtype=str)\n",
         "        for df in df_list:\n",
+        "            df_to_write = pd.concat(df_list, ignore_index=True, sort=False)\n",
         "            writer = pd.ExcelWriter(workbook, engine='xlsxwriter')\n",
         "            with writer as writer:\n",
-        "                df.to_excel(writer, sheet_name='AP2_new') # header=None, startrow = len(old_df)+1 \n",
+        "                df_to_write.to_excel(writer, sheet_name='AP2_new')\n",
         "        print(\"Eingabe gespeichert.\")\n",
         "    else:\n",
         "        print(\"Bis zum nächsten Mal!\")\n",
