--- a/JupyterNotebooks_DigiKAR/Factoids_Step3_SplitEvents_PROFS.ipynb
+++ b/JupyterNotebooks_DigiKAR/Factoids_Step3_SplitEvents_PROFS.ipynb
@@ -80,7 +80,7 @@
         "import pandas as pd\n",
         "from pandas import DataFrame\n",
         "import os\n",
-        "from ast import literal_eval\n",
+        "# from ast import literal_eval # can be used to check if cell content is string but different function was used below \n",
         "\n",
         "# path to input files\n",
         "\n",
