--- a/JupyterNotebooks_DigiKAR/XML_access_GutenbergAPI_on_the_fly.ipynb
+++ b/JupyterNotebooks_DigiKAR/XML_access_GutenbergAPI_on_the_fly.ipynb
@@ -1447,7 +1447,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now we can import the packages to the script and load our data."
+        "This script can support data comparison between the API and OCR data in DigiKAR."
       ],
       "metadata": {
         "id": "agRRVOwiOWXX"
