--- a/JupyterNotebooks_DigiKAR/PROFs_duplicateROWifDATES.ipynb
+++ b/JupyterNotebooks_DigiKAR/PROFs_duplicateROWifDATES.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRPL1FVh4OfLvUcMbtGMHU",
+      "authorship_tag": "ABX9TyM43cE6LxeS1kawc8O1ZpOI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d2762a36-74fa-4bf7-cb79-240771014560"
+        "outputId": "5e4cb6cb-0c1d-4e10-b05c-557bf72821b0"
       },
       "execution_count": 1,
       "outputs": [
@@ -80,15 +80,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nyo1hTaa_gnU",
-        "outputId": "0a50618f-d8c5-48c8-fc55-58d8e6d89683"
+        "outputId": "871de055-2ad9-434d-d93e-b16c6efbf944"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: xlsxwriter in /usr/local/lib/python3.10/dist-packages (3.1.2)\n",
+            "Collecting xlsxwriter\n",
+            "  Downloading XlsxWriter-3.1.2-py3-none-any.whl (153 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/153.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m153.0/153.0 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: xlsxwriter\n",
+            "Successfully installed xlsxwriter-3.1.2\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2022.7.1)\n",
@@ -116,12 +120,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 6275
+          "height": 1000
         },
         "id": "WJV35bw3IePw",
-        "outputId": "b03e8f0f-1b66-4b59-f956-90db90d220f8"
+        "outputId": "37bb31f0-90df-4328-9db4-6a7b5b3b3a92"
       },
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +234,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-53942a87-8c45-43df-abf6-f2ae72dece67\">\n",
+              "  <div id=\"df-55f4258a-469b-4631-b046-a2f9138ec9f6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -542,7 +546,7 @@
               "</table>\n",
               "<p>1250 rows × 21 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53942a87-8c45-43df-abf6-f2ae72dece67')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-55f4258a-469b-4631-b046-a2f9138ec9f6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -593,12 +597,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-53942a87-8c45-43df-abf6-f2ae72dece67 button.colab-df-convert');\n",
+              "          document.querySelector('#df-55f4258a-469b-4631-b046-a2f9138ec9f6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-53942a87-8c45-43df-abf6-f2ae72dece67');\n",
+              "          const element = document.querySelector('#df-55f4258a-469b-4631-b046-a2f9138ec9f6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -621,23 +625,17 @@
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: Total number of columns (21) exceeds max_columns (20) limiting to first (20) columns.\n"
-          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "keywords=[\"und\", \"oder\"]\n",
+        "keywords=[\"und\", \"oder\", \"später\", \"außerdem\", \"danach\"]\n",
         "myRange = range(1500, 1900)\n",
         "myColumns = [\"factoid_ID\",\n",
         "                \"pers_ID\",\n",
+        "                \"pers_name\"\n",
         "                \"alternative_names\",\n",
         "                \"event_type\",\n",
         "                \"event_after-date\",\n",
@@ -692,9 +690,9 @@
           "height": 1000
         },
         "id": "wad69T8Kt3G6",
-        "outputId": "5551f52e-b48e-4ba8-e0cb-583162fd09a2"
+        "outputId": "eb3ed28c-5034-4e84-e217-9b813d47c918"
       },
-      "execution_count": 25,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -2958,7 +2956,7 @@
             "no copying needed\n",
             "no copying needed\n",
             "no copying needed\n",
-            "no copying needed\n",
+            "keyword found\n",
             "no copying needed\n",
             "no copying needed\n",
             "no copying needed\n",
@@ -5723,18 +5721,18 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "      factoid_ID pers_ID alternative_names         event_type  \\\n",
-              "271         6602     OCR           Nydenus  Funktionsausübung   \n",
-              "271         6602     OCR           Nydenus  Funktionsausübung   \n",
-              "271         6602     OCR           Nydenus  Funktionsausübung   \n",
-              "407          358     OCR          de Puteo  Funktionsausübung   \n",
-              "407          358     OCR          de Puteo  Funktionsausübung   \n",
-              "...          ...     ...               ...                ...   \n",
-              "12809       6898     OCR               NaN  Funktionsausübung   \n",
-              "12809       6898     OCR               NaN  Funktionsausübung   \n",
-              "12809       6898     OCR               NaN  Funktionsausübung   \n",
-              "12816       2104     OCR               NaN  Funktionsausübung   \n",
-              "12816       2104     OCR               NaN  Funktionsausübung   \n",
+              "      factoid_ID pers_ID  pers_namealternative_names         event_type  \\\n",
+              "271         6602     OCR                         NaN  Funktionsausübung   \n",
+              "271         6602     OCR                         NaN  Funktionsausübung   \n",
+              "271         6602     OCR                         NaN  Funktionsausübung   \n",
+              "407          358     OCR                         NaN  Funktionsausübung   \n",
+              "407          358     OCR                         NaN  Funktionsausübung   \n",
+              "...          ...     ...                         ...                ...   \n",
+              "12809       6898     OCR                         NaN  Funktionsausübung   \n",
+              "12809       6898     OCR                         NaN  Funktionsausübung   \n",
+              "12809       6898     OCR                         NaN  Funktionsausübung   \n",
+              "12816       2104     OCR                         NaN  Funktionsausübung   \n",
+              "12816       2104     OCR                         NaN  Funktionsausübung   \n",
               "\n",
               "      event_after-date event_before-date         event_start  \\\n",
               "271                NaN               NaN  1578 # 1579 # 1580   \n",
@@ -5814,11 +5812,11 @@
               "12816          NaN  \n",
               "12816          NaN  \n",
               "\n",
-              "[4190 rows x 20 columns]"
+              "[4230 rows x 20 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-022a0cc6-5bd9-4f05-a771-0c8c27b8ac57\">\n",
+              "  <div id=\"df-6304f1d1-6d82-4d25-85a8-955737fb7d96\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5840,7 +5838,7 @@
               "      <th></th>\n",
               "      <th>factoid_ID</th>\n",
               "      <th>pers_ID</th>\n",
-              "      <th>alternative_names</th>\n",
+              "      <th>pers_namealternative_names</th>\n",
               "      <th>event_type</th>\n",
               "      <th>event_after-date</th>\n",
               "      <th>event_before-date</th>\n",
@@ -5865,7 +5863,7 @@
               "      <th>271</th>\n",
               "      <td>6602</td>\n",
               "      <td>OCR</td>\n",
-              "      <td>Nydenus</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>Funktionsausübung</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -5888,7 +5886,7 @@
               "      <th>271</th>\n",
               "      <td>6602</td>\n",
               "      <td>OCR</td>\n",
-              "      <td>Nydenus</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>Funktionsausübung</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -5911,7 +5909,7 @@
               "      <th>271</th>\n",
               "      <td>6602</td>\n",
               "      <td>OCR</td>\n",
-              "      <td>Nydenus</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>Funktionsausübung</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -5934,7 +5932,7 @@
               "      <th>407</th>\n",
               "      <td>358</td>\n",
               "      <td>OCR</td>\n",
-              "      <td>de Puteo</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>Funktionsausübung</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -5957,7 +5955,7 @@
               "      <th>407</th>\n",
               "      <td>358</td>\n",
               "      <td>OCR</td>\n",
-              "      <td>de Puteo</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>Funktionsausübung</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -6116,9 +6114,9 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>4190 rows × 20 columns</p>\n",
+              "<p>4230 rows × 20 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-022a0cc6-5bd9-4f05-a771-0c8c27b8ac57')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6304f1d1-6d82-4d25-85a8-955737fb7d96')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -6169,12 +6167,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-022a0cc6-5bd9-4f05-a771-0c8c27b8ac57 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6304f1d1-6d82-4d25-85a8-955737fb7d96 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-022a0cc6-5bd9-4f05-a771-0c8c27b8ac57');\n",
+              "          const element = document.querySelector('#df-6304f1d1-6d82-4d25-85a8-955737fb7d96');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -6218,9 +6216,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X2U5-aeY8Vpj",
-        "outputId": "8c3aa37e-8521-4c80-f81a-68ea614ebac1"
+        "outputId": "7f323ec1-1b17-4a6a-d57b-e01fc7973d9b"
       },
-      "execution_count": 26,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -6233,7 +6231,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-26-746e6a5cb0f4>:7: FutureWarning: save is not part of the public API, usage can give unexpected results and will be removed in a future version\n",
+            "<ipython-input-6-746e6a5cb0f4>:7: FutureWarning: save is not part of the public API, usage can give unexpected results and will be removed in a future version\n",
             "  writer.save() # Close the Pandas Excel writer and output the Excel file.\n"
           ]
         },
